--- a/eager-feedback-app.css
+++ b/eager-feedback-app.css
@@ -156,7 +156,9 @@
     text-overflow: ellipsis !important;
     white-space: nowrap !important;
     height: 2em !important;
-    max-width: 20em !important;
+    width: auto !important;
+    min-width: auto !important;
+    max-width: auto !important;
     padding: .5em .8em !important;
     line-height: initial !important;
     border-radius: .1875em .1875em 0 0 !important;
